--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,25 @@
       color:green;
    }
 img {
-   width:70px;
-   height:70px;
-   margin-right:5px;
+   width:400px;
+   height:400px;
+   /*margin-right:5px;*/
    background-color:white;
    }
 
 body {
       background-image: url("../images/globe.jpg");
+   }
+
+#response {
+   background-color: white;
+  height: 60px;
+}
+
+#responseImg {
+   width:500px;
+   height:500px;
+   background-color:white;
    }
 
 .head {
@@ -42,20 +53,9 @@ body {
    padding-left:0px;
 }
 
-.gamerules {
-   background-color: peachpuff;
-   margin-top:10px;
-   margin-bottom: 10px;
-   margin-left: 10px;
-   padding-bottom: 60px;
-   padding-top: 20px;
-   color:green;
 
-}
-
-
-.winloss1{
-   background-color: lightblue;
+.winloss{
+   background-color: white;
    color:black;
    height:100px;
 }
@@ -71,13 +71,12 @@ body {
    background-color:rgb(239, 243, 239);
    color:black;
    height: 100px;
-   /*margin-left:10px;
-   margin-right:10px;*/
 }
 
 #question{
    background-color:yellow;
    color:blue;
+   height: 50px;
 }
 #optionsBtn{
    background-color:green;
@@ -86,10 +85,12 @@ body {
 
 .start-button {
    width: 100px;
-   height: 500px;
+   height: 50px;
    border-style: solid;
    padding: 2px;
-   float: left;
    margin: 2px;
+ }
+ .option {
+    width:200px;
  }
 
