--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,52 +10,33 @@
       color:green;
    }
 img {
-   width:400px;
-   height:400px;
-   /*margin-right:5px;*/
-   background-color:white;
+   width:300px;
+   height:300px;
+   /*margin-right:5px;
+   background-color:white;*/
    }
 
 body {
       background-image: url("../images/globe.jpg");
    }
-
-#response {
-   background-color: white;
-  height: 60px;
+   
+.container {
+   background-color:  rgb(231, 231, 167);
+   margin-top: 20px;
+   height: 600px;
+   width:70%;
 }
 
-#responseImg {
-   width:500px;
-   height:500px;
-   background-color:white;
-   }
+
 
 .head {
-   background: rgb(139, 179, 231);
+   /*background: rgb(139, 179, 231);*/
    color: darkblue;
    font-size: 80px;
 }
 
-.jumbotron {
-   background-color: white;
-   opacity: .3;
-}
-.header {
-   background: darkorange;
-   font-size: 40px;
-   color: white;
-   text-align: center;
-   margin-left:10px;
-   padding-top: 20px;
-   padding-bottom: 20px;
-   padding-right: 0px;
-   padding-left:0px;
-}
-
 
 .winloss{
-   background-color: white;
    color:black;
    height:100px;
 }
@@ -68,29 +49,55 @@ body {
 }
 
 #timer{
-   background-color:rgb(239, 243, 239);
+ /*  background-color:rgb(239, 243, 239);*/
    color:black;
-   height: 100px;
-}
-
-#question{
-   background-color:yellow;
-   color:blue;
    height: 50px;
 }
-#optionsBtn{
-   background-color:green;
-   color:yellow;
+
+
+.option{
+   /*background-color:darkblue;*/
+   color:blue;
+   background-color:  rgb(231, 231, 167);
+   font-size:20px;
+   padding:10px;
+   margin-top:10px;
+   border:0;
+}
+
+.option:hover {
+color: rgb(231, 231, 167);
+background-color: blue;
 }
 
 .start-button {
-   width: 100px;
+   width: 200px;
    height: 50px;
+   background-color:darkblue;
+   color:yellow;
    border-style: solid;
-   padding: 2px;
-   margin: 2px;
+   padding:10px;
+   margin-top:10px;
+ /*  padding: 2px;
+   margin: 2px;*/
  }
- .option {
-    width:200px;
+ 
+ .gameover{
+    font-size: 30px;
+    color: blue;
  }
+
+ .gameoverhead{
+   font-size: 60px;
+   color: black;
+}
+.response{
+   font-size: 30px;
+   color: blue;
+}
+.question{
+   font-size: 30px;
+   color: red;
+   padding:10px;
+}
 
