--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,11 @@ body {
    padding:10px;
 }
 
+@media (max-width: 640px) {
+	body {
+      width:100%;
+      height:100%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      }
+   }
