--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ body {
 	.container {
       width:100%;
       height:100%;
+      padding-bottom: 20px;
       background-repeat: no-repeat;
       background-size: cover;
       }
