--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body {
    padding:10px;
 }
 
-@media (max-width: 640px) {
+/*@media (max-width: 640px) {
 	.container {
       width:100%;
       height:100%;
@@ -86,4 +86,4 @@ body {
       background-repeat: no-repeat;
       background-size: cover;
       }
-   }
+   }*/
